eliminate compiler warnings and organize imports